Added html and CSS

--- a/pages/github.html
+++ b/pages/github.html
@@ -14,31 +14,38 @@
   <body class="home">
     <div class="d-flex justify-content-center">
       <header>
-        <h1 class="d-flex justify-content-center">Our GitHub Contributions!</h1>
+        <h1 class="d-flex justify-content-center">Our GitHub Contributions</h1>
         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="../index.html"
+          <a class="navbar-brand text-center" href="../index.html"
             ><button type="button" class="btn btn-primary">Home</button></a
           >
-          <a class="navbar-brand" href="about.html"
+          <a class="navbar-brand text-center" href="about.html"
             ><button type="button" class="btn btn-primary">About Us</button></a
           >
-          <a class="navbar-brand" href="github.html"
+          <a class="navbar-brand text-center" href="github.html"
             ><button type="button" class="btn btn-primary">
               Github Contributions
             </button></a
           >
-          <a class="navbar-brand" href="people.html"
+          <a class="navbar-brand text-center" href="people.html"
             ><button type="button" class="btn btn-primary">
               Our People
             </button></a
           >
-          <a class="navbar-brand" href="projects.html"
+          <a class="navbar-brand text-center" href="projects.html"
             ><button type="button" class="btn btn-primary">
               Our Projects
             </button></a
           >
         </nav>
       </header>
+    </div>
+    <div class="text-center">
+      <h3>Check out what we've done on Github!</h3>
+      <img
+        src="http://ghchart.rshah.org/AgentSamSA"
+        alt="AgentSamSA's Github chart"
+      />
     </div>
   </body>
 </html>
