--- a/pages/people.html
+++ b/pages/people.html
@@ -16,23 +16,23 @@
       <header>
         <h1 class="d-flex justify-content-center">Meet Our People</h1>
         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="../index.html"
+          <a class="navbar-brand text-center" href="../index.html"
             ><button type="button" class="btn btn-primary">Home</button></a
           >
-          <a class="navbar-brand" href="about.html"
+          <a class="navbar-brand text-center" href="about.html"
             ><button type="button" class="btn btn-primary">About Us</button></a
           >
-          <a class="navbar-brand" href="github.html"
+          <a class="navbar-brand text-center" href="github.html"
             ><button type="button" class="btn btn-primary">
               Github Contributions
             </button></a
           >
-          <a class="navbar-brand" href="people.html"
+          <a class="navbar-brand text-center" href="people.html"
             ><button type="button" class="btn btn-primary">
               Our People
             </button></a
           >
-          <a class="navbar-brand" href="projects.html"
+          <a class="navbar-brand text-center" href="projects.html"
             ><button type="button" class="btn btn-primary">
               Our Projects
             </button></a
@@ -40,5 +40,96 @@
         </nav>
       </header>
     </div>
+    <div
+      id="carouselExampleControls"
+      class="carousel carousel-dark slide mx-auto w-50 mt-5"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="3"
+          aria-label="Slide 4"
+        ></button>
+      </div>
+
+      <div
+        class="carousel-inner mx-auto"
+        style="max-width: 500px; max-height: 500px !important"
+      >
+        <div class="carousel-item active">
+          <img
+            src="../img/swagjosh.jpg"
+            class="d-block w-100"
+            alt="A cool dude"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="../img/avatar1.jpg"
+            class="d-block w-100"
+            alt="A powerful dude"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="../img/rahulW.jpg"
+            class="d-block w-100"
+            alt="A happy dude"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="../img/nickWut.png"
+            class="d-block w-100"
+            alt="A concerned dude"
+          />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
