--- a/pages/about.html
+++ b/pages/about.html
@@ -16,29 +16,43 @@
       <header>
         <h1 class="d-flex justify-content-center">A Little About Us</h1>
         <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="../index.html"
+          <a class="navbar-brand text-center" href="../index.html"
             ><button type="button" class="btn btn-primary">Home</button></a
           >
-          <a class="navbar-brand" href="about.html"
+          <a class="navbar-brand text-center" href="about.html"
             ><button type="button" class="btn btn-primary">About Us</button></a
           >
-          <a class="navbar-brand" href="github.html"
+          <a class="navbar-brand text-center" href="github.html"
             ><button type="button" class="btn btn-primary">
               Github Contributions
             </button></a
           >
-          <a class="navbar-brand" href="people.html"
+          <a class="navbar-brand text-center" href="people.html"
             ><button type="button" class="btn btn-primary">
               Our People
             </button></a
           >
-          <a class="navbar-brand" href="projects.html"
+          <a class="navbar-brand text-center href="projects.html"
             ><button type="button" class="btn btn-primary">
               Our Projects
             </button></a
           >
         </nav>
       </header>
+    </div>
+    <div class="d-flex flex-column text-center text-wrap w-50 mx-auto mt-5">
+      <p>
+        Cillum deserunt veniam aliquip nulla eu ex commodo excepteur consequat laboris consectetur fugiat minim. Duis qui velit nostrud aute occaecat nisi fugiat aliquip. Ullamco est anim anim qui commodo adipisicing mollit aute cupidatat incididunt. Tempor esse minim non velit ex cillum cupidatat duis est.
+      </p>
+      <p>
+        Velit excepteur do consectetur reprehenderit quis laboris consectetur aute exercitation sunt. Tempor fugiat Lorem nostrud sit nostrud occaecat ex nisi veniam. Veniam esse culpa sint pariatur in qui eiusmod anim aliqua. Ea ut eiusmod adipisicing occaecat incididunt non magna aliquip mollit mollit voluptate cillum labore nostrud.
+      </p>
+      <p>
+        Occaecat sint duis cillum mollit irure aute id anim non commodo. Ea reprehenderit sunt cupidatat incididunt nisi anim laborum non laborum eiusmod nisi. Dolore reprehenderit pariatur commodo Lorem ad ea tempor velit Lorem Lorem culpa minim enim.
+      </p>
+    </div>
+    <div class=>
+      <img src="../img/5429710.jpg" class="img-responsive center-block d-block mx-auto" alt="People having a conversation amidst a city backdrop">
     </div>
   </body>
 </html>
